[workspace]
members = [
    "chain",
    "client",
    "inspector",
    "indexer",
    "types",
]
resolver = "2"

[workspace.package]
version = "0.0.19"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alto-client = { version = "0.0.19", path = "client" }
alto-types = { version = "0.0.19", path = "types" }
commonware-broadcast = "2026.2.0"
commonware-codec = "2026.2.0"
commonware-consensus = "2026.2.0"
commonware-cryptography = "2026.2.0"
commonware-deployer = { version = "2026.2.0", default-features = false }
commonware-macros = "2026.2.0"
commonware-p2p = "2026.2.0"
commonware-resolver = "2026.2.0"
commonware-runtime = "2026.2.0"
commonware-storage = "2026.2.0"
commonware-stream = "2026.2.0"
commonware-utils = "2026.2.0"
commonware-math = "2026.2.0"
commonware-parallel = "2026.2.0"
thiserror = "2.0.12"
bytes = "1.7.1"
rand = "0.8.5"
prost = "0.13.5"
prost-build = "0.13.5"
futures = "0.3.31"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
governor = "0.10.2"
prometheus-client = "0.22.3"
clap = "4.5.18"
tokio = "1.41.0"
axum = "0.8.8"
tower = "0.5.2"
tower-http = "0.6.2"
reqwest = "0.12.12"
tokio-tungstenite = "0.28.0"

[profile.bench]
# Because we enable overflow checks in "release," we should benchmark with them.
overflow-checks = true

[profile.dev]
# Although overflow checks are enabled by default in "dev", we explicitly
# enable them here for clarity.
overflow-checks = true

[profile.release]
# To guard against unexpected behavior in production, we enable overflow checks in
# "release" although they incur some performance penalty.
overflow-checks = true
# Use a single codegen unit for better optimization (slower compile, faster runtime)
codegen-units = 1
# Enable link-time optimization across all crates
lto = true

[profile.test]
# Although overflow checks are enabled by default in "test", we explicitly
# enable them here for clarity.
overflow-checks = true
