[workspace]
members = [
    "chain",
    "client",
    "inspector",
    "indexer",
    "types",
]
resolver = "2"

[workspace.package]
version = "0.0.18"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alto-client = { version = "0.0.18", path = "client" }
alto-types = { version = "0.0.18", path = "types" }
commonware-broadcast = { path = "../monorepo/broadcast" }
commonware-codec = { path = "../monorepo/codec" }
commonware-consensus = { path = "../monorepo/consensus" }
commonware-cryptography = { path = "../monorepo/cryptography" }
commonware-deployer = { path = "../monorepo/deployer", default-features = false }
commonware-macros = { path = "../monorepo/macros" }
commonware-p2p = { path = "../monorepo/p2p" }
commonware-resolver = { path = "../monorepo/resolver" }
commonware-runtime = { path = "../monorepo/runtime" }
commonware-storage = { path = "../monorepo/storage" }
commonware-stream = { path = "../monorepo/stream" }
commonware-utils = { path = "../monorepo/utils" }
commonware-math = { path = "../monorepo/math" }
commonware-parallel = { path = "../monorepo/parallel" }
thiserror = "2.0.12"
bytes = "1.7.1"
rand = "0.8.5"
prost = "0.13.5"
prost-build = "0.13.5"
futures = "0.3.31"
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
governor = "0.10.2"
prometheus-client = "0.24.0"
clap = "4.5.18"
tokio = "1.41.0"
axum = "0.8.8"
tower = "0.5.2"
tower-http = "0.6.2"
reqwest = "0.12.12"
tokio-tungstenite = "0.28.0"

[profile.bench]
# Because we enable overflow checks in "release," we should benchmark with them.
overflow-checks = true

[profile.dev]
# Although overflow checks are enabled by default in "dev", we explicitly
# enable them here for clarity.
overflow-checks = true

[profile.release]
# To guard against unexpected behavior in production, we enable overflow checks in
# "release" although they incur some performance penalty.
overflow-checks = true
# Use a single codegen unit for better optimization (slower compile, faster runtime)
codegen-units = 1
# Enable link-time optimization across all crates
lto = true

[profile.test]
# Although overflow checks are enabled by default in "test", we explicitly
# enable them here for clarity.
overflow-checks = true
