[package]
name = "alto-chain"
version = "0.0.1"
publish = true
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A minimal blockchain built with the Commonware Library."
readme = "README.md"
homepage = "https://alto.commonware.xyz"
repository = "https://github.com/commonwarexyz/alto/tree/main/chain"
documentation = "https://docs.rs/alto-chain"

[dependencies]
alto-types = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-macros = { workspace = true }
commonware-p2p = { workspace = true }
commonware-resolver = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-stream = { workspace = true }
commonware-utils = { workspace = true }
bytes =  { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
governor = { workspace = true }
prometheus-client = { workspace = true }

[[bin]]
name = "validator"
path = "src/bin/validator.rs"

[[bin]]
name = "setup"
path = "src/bin/setup.rs"
