[package]
name = "alto-client"
version.workspace = true
publish = true
edition.workspace = true
license.workspace = true
description = "Client for interacting with alto."
readme = "README.md"
homepage = "https://alto.commonware.xyz"
repository = "https://github.com/commonwarexyz/alto/tree/main/client"
documentation = "https://docs.rs/alto-client"

[dependencies]
alto-types = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23.23", default-features = false, features = ["std", "aws_lc_rs"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
tokio = { workspace = true, features = ["full"] }
webpki-roots = "0.26.11"
