[package]
name = "alto-indexer"
version = "0.0.14"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Serve alto activity locally."

[dependencies]
alto-client = { workspace = true }
alto-types = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
tokio-tungstenite = { workspace = true }

[[bin]]
name = "indexer"
path = "src/main.rs"

[lib]
name = "alto_indexer"
path = "src/lib.rs"

[dev-dependencies]
commonware-cryptography = { workspace = true, features = ["mocks"] }
commonware-consensus = { workspace = true, features = ["mocks"] }
