[package]
name = "alto-indexer"
version.workspace = true
publish = true
edition.workspace = true
license.workspace = true
description = "Serve alto activity."
readme = "README.md"
homepage = "https://alto.commonware.xyz"
repository = "https://github.com/commonwarexyz/alto/tree/main/indexer"
documentation = "https://docs.rs/alto-indexer"

[dependencies]
alto-client = { workspace = true }
alto-types = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-utils = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["ws"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
reqwest = { workspace = true, features = ["json", "native-tls"] }
tokio-tungstenite = { workspace = true }

[[bin]]
name = "indexer"
path = "src/main.rs"

[lib]
name = "alto_indexer"
path = "src/lib.rs"

[dev-dependencies]
commonware-cryptography = { workspace = true, features = ["mocks"] }
commonware-consensus = { workspace = true, features = ["mocks"] }
rcgen = { version = "0.14", features = ["crypto", "pem"] }
rustls = "0.23"
tokio-rustls = "0.26"
hyper = "1.5"
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
native-tls = "0.2"
