[package]
name = "alto-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Validator binary for alto."

[dependencies]
alto-chain = { version = "0.0.19", path = "../chain" }
alto-client = { workspace = true }
alto-types = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-deployer = { workspace = true }
commonware-p2p = { workspace = true }
commonware-runtime = { workspace = true }
commonware-utils = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
serde_yaml = "0.9.34"

[[bin]]
name = "validator"
path = "src/main.rs"
