[package]
name = "alto-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Run a validator node for alto."

[dependencies]
alto-chain = { workspace = true }
alto-client = { workspace = true }
alto-types = { workspace = true }
commonware-broadcast = { workspace = true }
commonware-codec = { workspace = true }
commonware-consensus = { workspace = true }
commonware-cryptography = { workspace = true }
commonware-deployer = { workspace = true }
commonware-parallel = { workspace = true }
commonware-p2p = { workspace = true }
commonware-resolver = { workspace = true }
commonware-runtime = { workspace = true }
commonware-storage = { workspace = true }
commonware-utils = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
serde_yaml = "0.9.34"

[[bin]]
name = "validator"
path = "src/main.rs"
